--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,16 @@
 {
-  "name": "email-parsing", // 你的 Worker 名称
-  "main": "_worker.js",     // 关键：告诉 CF 入口文件是这个
+  "name": "email-parsing-mime",
+  "main": "_worker.js",
   "compatibility_date": "2026-01-20",
   "ai": {
-    "binding": "AI"        // 确保你的代码可以调用 env.AI
+    "binding": "AI"
+  },
+  "vars": {
+    "AI_MODEL": "@cf/qwen/qwen1.5-7b-chat-awq", // 非敏感，可直接写
+    "FORWARD_TO": "",          // 留空，在控制台填写
+    "WECOM_WEBHOOK_URL": "",   // 留空，在控制台填写
+    "TG_BOT_TOKEN": "",        // 留空，在控制台填写
+    "TG_CHAT_ID": ""           // 留空，在控制台填写
   },
   "observability": {
     "enabled": true
