--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,8 +10,8 @@
     "FORWARD_TO": "",          // 留空，在控制台填写
     "WECOM_WEBHOOK_URL": "",   // 留空，在控制台填写
     "TG_BOT_TOKEN": "",        // 留空，在控制台填写
-    "TG_CHAT_ID": ""           // 留空，在控制台填写
-    "GEMINI_API_KEY":""        // 留空，在控制台填写
+    "TG_CHAT_ID": "" ,         // 留空，在控制台填写
+    "GEMINI_API_KEY": ""       // 留空，在控制台填写
   },
   "observability": {
     "enabled": true
